{
  "version": 4,
  "terraform_version": "1.2.0",
  "serial": 733,
  "lineage": "e70936c1-9d39-9f10-c8b6-3a2a6f884385",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:425286318105:security-group/sg-0a9a079cbd0d260bc",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a9a079cbd0d260bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "node_group_one20221006024725915300000004",
            "name_prefix": "node_group_one",
            "owner_id": "425286318105",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c76f95948e29892"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:425286318105:security-group/sg-0f7959e44385a9301",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f7959e44385a9301",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "node_group_two20221006024725916300000005",
            "name_prefix": "node_group_two",
            "owner_id": "425286318105",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c76f95948e29892"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:425286318105:security-group/sg-0cfa343d6be475794",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0cfa343d6be475794",
            "ingress": [],
            "name": "demo-eks-ZpHCKd4o-cluster-20221006024726463700000006",
            "name_prefix": "demo-eks-ZpHCKd4o-cluster-",
            "owner_id": "425286318105",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-eks-ZpHCKd4o-cluster"
            },
            "tags_all": {
              "Name": "demo-eks-ZpHCKd4o-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c76f95948e29892"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:425286318105:security-group/sg-0eca4f2485ea6743e",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0eca4f2485ea6743e",
            "ingress": [],
            "name": "demo-eks-ZpHCKd4o-node-20221006024726769600000007",
            "name_prefix": "demo-eks-ZpHCKd4o-node-",
            "owner_id": "425286318105",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-eks-ZpHCKd4o-node",
              "kubernetes.io/cluster/demo-eks-ZpHCKd4o": "owned"
            },
            "tags_all": {
              "Name": "demo-eks-ZpHCKd4o-node",
              "kubernetes.io/cluster/demo-eks-ZpHCKd4o": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c76f95948e29892"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1288056839",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cfa343d6be475794",
            "self": false,
            "source_security_group_id": "sg-0eca4f2485ea6743e",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3606652956",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cfa343d6be475794",
            "self": false,
            "source_security_group_id": "sg-0eca4f2485ea6743e",
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2347040859",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cfa343d6be475794",
            "self": false,
            "source_security_group_id": "sg-0eca4f2485ea6743e",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3555349293",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0eca4f2485ea6743e",
            "self": false,
            "source_security_group_id": "sg-0cfa343d6be475794",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-2607629309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0eca4f2485ea6743e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-1152614115",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0eca4f2485ea6743e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-976051182",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0eca4f2485ea6743e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-200234034",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0eca4f2485ea6743e",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2240337492",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0eca4f2485ea6743e",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4272559239",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0eca4f2485ea6743e",
            "self": false,
            "source_security_group_id": "sg-0cfa343d6be475794",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1440107037",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0eca4f2485ea6743e",
            "self": false,
            "source_security_group_id": "sg-0cfa343d6be475794",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3708939548",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0eca4f2485ea6743e",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2035175155",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0eca4f2485ea6743e",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b96683ad7b0ef280",
            "domain": "vpc",
            "id": "eipalloc-0b96683ad7b0ef280",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-3-10-186-5.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.186.5",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-vpc-eu-west-2a"
            },
            "tags_all": {
              "Name": "demo-vpc-eu-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:425286318105:internet-gateway/igw-0a600d5b038b59295",
            "id": "igw-0a600d5b038b59295",
            "owner_id": "425286318105",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            },
            "vpc_id": "vpc-00c76f95948e29892"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b96683ad7b0ef280",
            "connectivity_type": "public",
            "id": "nat-0388bd19b635bf14a",
            "network_interface_id": "eni-09d5973803cdde938",
            "private_ip": "10.0.4.16",
            "public_ip": "3.10.186.5",
            "subnet_id": "subnet-03a5bf2809422ae3d",
            "tags": {
              "Name": "demo-vpc-eu-west-2a"
            },
            "tags_all": {
              "Name": "demo-vpc-eu-west-2a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00bb1c8a0a4a7640f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0388bd19b635bf14a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00bb1c8a0a4a7640f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a600d5b038b59295",
            "id": "r-rtb-07319296d8a16b5221080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07319296d8a16b522",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:425286318105:route-table/rtb-00bb1c8a0a4a7640f",
            "id": "rtb-00bb1c8a0a4a7640f",
            "owner_id": "425286318105",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-vpc-private"
            },
            "tags_all": {
              "Name": "demo-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c76f95948e29892"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:425286318105:route-table/rtb-07319296d8a16b522",
            "id": "rtb-07319296d8a16b522",
            "owner_id": "425286318105",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-vpc-public"
            },
            "tags_all": {
              "Name": "demo-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c76f95948e29892"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc76501654b024a3",
            "route_table_id": "rtb-00bb1c8a0a4a7640f",
            "subnet_id": "subnet-0501339e519156cdf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01344c7b583d9d431",
            "route_table_id": "rtb-00bb1c8a0a4a7640f",
            "subnet_id": "subnet-0ee5dcd75f28ad7fb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c9355414c4fa7fe",
            "route_table_id": "rtb-00bb1c8a0a4a7640f",
            "subnet_id": "subnet-0f230fa021c568389"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02720d936e295f456",
            "route_table_id": "rtb-07319296d8a16b522",
            "subnet_id": "subnet-03a5bf2809422ae3d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0218a7c2058f8302c",
            "route_table_id": "rtb-07319296d8a16b522",
            "subnet_id": "subnet-095dad1756ff86309"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010ff46aa0f945a6d",
            "route_table_id": "rtb-07319296d8a16b522",
            "subnet_id": "subnet-0fea1ae922f580bf9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:425286318105:subnet/subnet-0501339e519156cdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0501339e519156cdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425286318105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/demo-eks-ZpHCKd4o": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "demo-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/demo-eks-ZpHCKd4o": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00c76f95948e29892"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:425286318105:subnet/subnet-0ee5dcd75f28ad7fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee5dcd75f28ad7fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425286318105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/demo-eks-ZpHCKd4o": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "demo-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/demo-eks-ZpHCKd4o": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00c76f95948e29892"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:425286318105:subnet/subnet-0f230fa021c568389",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f230fa021c568389",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425286318105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-private-eu-west-2c",
              "kubernetes.io/cluster/demo-eks-ZpHCKd4o": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "demo-vpc-private-eu-west-2c",
              "kubernetes.io/cluster/demo-eks-ZpHCKd4o": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00c76f95948e29892"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:425286318105:subnet/subnet-03a5bf2809422ae3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a5bf2809422ae3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "425286318105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/demo-eks-ZpHCKd4o": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "demo-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/demo-eks-ZpHCKd4o": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00c76f95948e29892"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:425286318105:subnet/subnet-095dad1756ff86309",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095dad1756ff86309",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "425286318105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/demo-eks-ZpHCKd4o": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "demo-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/demo-eks-ZpHCKd4o": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00c76f95948e29892"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:425286318105:subnet/subnet-0fea1ae922f580bf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fea1ae922f580bf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "425286318105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-public-eu-west-2c",
              "kubernetes.io/cluster/demo-eks-ZpHCKd4o": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "demo-vpc-public-eu-west-2c",
              "kubernetes.io/cluster/demo-eks-ZpHCKd4o": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00c76f95948e29892"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:425286318105:vpc/vpc-00c76f95948e29892",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-034e9634010877704",
            "default_route_table_id": "rtb-0e600ae7a394cf0ca",
            "default_security_group_id": "sg-0110848e3512a8408",
            "dhcp_options_id": "dopt-0019e059642528bfd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00c76f95948e29892",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e600ae7a394cf0ca",
            "owner_id": "425286318105",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}